crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__type_checking_directive_used.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### mypy type ignore

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # type: ignore
  |              ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### mypy with specific error code

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # type: ignore[name-defined]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Multiple mypy error codes

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # type: ignore[name-defined, arg-type]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### pyright ignore

warning[type-checking-directive-used]: Type checking directive `pyright: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyright: ignore
  |              ^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### pyright with error code

warning[type-checking-directive-used]: Type checking directive `pyright: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyright: ignore[reportUndefinedVariable]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### ty ignore

warning[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # ty: ignore
  |              ^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### ty with error code

warning[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # ty: ignore[unresolved-reference]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### pyrefly ignore

warning[type-checking-directive-used]: Type checking directive `pyrefly: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyrefly: ignore
  |              ^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### pyrefly with error code

warning[type-checking-directive-used]: Type checking directive `pyrefly: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # pyrefly: ignore[unknown-name]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Inline type ignore on assignment

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:19
  |
1 | x: int = "wrong"  # type: ignore
  |                   ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on function call

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:4:28
  |
2 |     return x
3 |
4 | result = process("wrong")  # type: ignore
  |                            ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on method call

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:6:20
  |
5 | h = Handler()
6 | h.handle("wrong")  # type: ignore
  |                    ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on import

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:36
  |
1 | from nonexistent import something  # type: ignore
  |                                    ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on attribute access

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:26
  |
1 | obj = get_object()
2 | value = obj.nonexistent  # type: ignore
  |                          ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore in class

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:27
  |
1 | class MyClass:
2 |     value: int = "wrong"  # type: ignore
  |                           ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on return

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:23
  |
1 | def get_number() -> int:
2 |     return "not_int"  # type: ignore
  |                       ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Multiple directives same line

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:12
  |
1 | x = foo()  # type: ignore  # pyright: ignore
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore with other comments

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:18
  |
1 | x = calculate()  # type: ignore - TODO: fix this later
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore in list comprehension

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:35
  |
1 | values = [foo(x) for x in items]  # type: ignore
  |                                   ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore in dict comprehension

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:44
  |
1 | mapping = {k: wrong(v) for k, v in pairs}  # type: ignore
  |                                            ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on generator

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:36
  |
1 | gen = (process(x) for x in items)  # type: ignore
  |                                    ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore with cast

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:30
  |
1 | from typing import cast
2 | value = cast(int, "string")  # type: ignore
  |                              ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on decorator

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:18
  |
1 | @some_decorator  # type: ignore
  |                  ^^^^^^^^^^^^^^
2 | def my_function():
3 |     pass
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on with statement

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:26
  |
1 | with open("file") as f:  # type: ignore
  |                          ^^^^^^^^^^^^^^
2 |     pass
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on context manager

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:32
  |
1 | with wrong_context_manager():  # type: ignore
  |                                ^^^^^^^^^^^^^^
2 |     pass
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on assert

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:27
  |
1 | assert wrong_condition()  # type: ignore
  |                           ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on raise

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:25
  |
1 | raise WrongException()  # type: ignore
  |                         ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore on try-except

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:24
  |
1 | try:
2 |     risky_operation()  # type: ignore
  |                        ^^^^^^^^^^^^^^
3 | except Exception:
4 |     pass
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Type ignore in f-string

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:37
  |
1 | message = f"Value: {wrong_func()}"  # type: ignore
  |                                     ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Ignore on binary operation

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:26
  |
1 | result = "string" + 123  # type: ignore
  |                          ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Ignore on comparison

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:21
  |
1 | if "string" > 123:  # type: ignore
  |                     ^^^^^^^^^^^^^^
2 |     pass
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Hidden runtime error

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:4:41
  |
2 |     return sum(items)
3 |
4 | result = calculate_total("not a list")  # type: ignore
  |                                         ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Masking attribute error

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:5:14
  |
4 | p = Person()
5 | age = p.age  # type: ignore
  |              ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


### Hiding incompatible return

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:28
  |
1 | def get_number() -> int:
2 |     return "not a number"  # type: ignore
  |                            ^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file


## Ensure we don't catch examples of "type: ignore" randomly in a comment


## Ensure we still catch cases where extra whitespace is added

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:2:28
  |
1 | def get_number() -> int:
2 |     return "not a number"  #   type: ignore
  |                            ^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
